
Enhancements
 * Code and tests refactoring
 * Minor documentation update for Aruba Controllers

Bug Fixes
 * Buttons in graphs.php of type ifoctetshistoryswitch, ifoctetshistoryuser, ifoctetshistorymac (#1110)
 * Web Admin usability fixes (#1071)
 * Small typo error in node.pm log message (#1357)
 * Interpolation issue in pf::web::custom's code which is disabled by default (#1358)

--------------------------------------------------------------------------------
Version 3.1.0 released on 2011-12-23

New Hardware Support
 * Stacked Cisco 3750 in MAC-Auth or 802.1X
 * AeroHIVE, Aruba and Motorola support RADIUS Disconnect (RFC3576) to perform de-authentication

New Features
 * Statement of Health (SoH) support for reliable client-side policy compliance through 802.1X
 * MAC violation triggers allowing to isolate a single device (#1320)
 * Detection of rogue DHCP Servers even behind relays (#1151)
 * RFC3576 (RADIUS Change of Authorization / Disconnect) support added
 * Preview support for wired port-bounce on Cisco through CoA (RFC3576). Disabled by default.
 * Wireless profile provisioning for iPhone, iPods, and iPads devices
 * SNMP traps rate-limiting mechanism
 * New graphs in the web admin UI -- replaced jpgraph (PHP) by gRaphael (JavaScript)

Enhancements
 * Using HTTP Return Code 501 "Not Implemented" for more effective client blocking
 * Cleanup in the Cisco 3560's code and documentation
 * Startup performance improvements
 * Added support for session-keyfile introduced in BIND 9.7 (#1257)
 * Several improvements in the dhcp_dumper.pl addon
 * Global option to disable rogue DHCP server detection
 * Performance improvements to pfdhcplistener
 * More startup validation on SNMPv3 Trap configuration
 * CentOS 6.2 support
 * Several new HTTP User-Agents detected
 * Several new DHCP fingerprints (from our spinoff www.fingerbank.org)
 * Better support of WISPr (captive portal detection)
 * Configuration flag to disable the captive portal's network detection feature