@@ -27,7 +27,7 @@ type=
 uplink=dynamic
 
 # SNMP
-SNMPVersionTrap=3
+SNMPVersionTrap=2c
 SNMPUserNameTrap=readUser
 SNMPAuthProtocolTrap=MD5
 SNMPAuthPasswordTrap=authpwdread
@@ -98,7 +98,7 @@ wsPwd=webservices_pwd
 radiusSecret=bigsecret
 
 voiceVlan=10
-SNMPEngineID=SNMPEngineID
+SNMPEngineID=0123456
 SNMPUserNameRead=userRead
 SNMPAuthProtocolRead=AutProtoRead
 SNMPAuthPasswordRead=AuthPassRead
@@ -127,3 +127,14 @@ type=ThreeCom::Switch_4200G
 
 [10.0.0.4]
 type=Cisco::Catalyst_3750
+
+# regression test switch for #1354
+[10.0.0.5]
+type=Cisco::Catalyst_2900XL
+SNMPVersionTrap=3
+SNMPEngineID=6543210
+SNMPUserNameTrap=readUser
+SNMPAuthProtocolTrap=MD5
+SNMPAuthPasswordTrap=authpwdread
+SNMPPrivProtocolTrap=DES
+SNMPPrivPasswordTrap=privpwdread
