@@ -24,6 +24,7 @@ Bug Fixes
  * Web Admin usability fixes (#1071)
  * Small typo error in node.pm log message (#1357)
  * Interpolation issue in pf::web::custom's code which is disabled by default (#1358)
+ * Allow more than one SNMPv3 EngineID per user (#1354)
 
 --------------------------------------------------------------------------------
 Version 3.1.0 released on 2011-12-23
